아이콘추가 앱이름 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">HoloStation</string>
+    <string name="add_new_channel">Add New Channel</string>
 </resources>
