--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">HoloStation</string>
+    <string name="app_name_release">HoloStation</string>
+    <string name="app_name_debug">HoloStation Debug</string>
     <string name="add_new_channel">Add New Channel</string>
 </resources>
